--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,9 +118,9 @@ h6,
     max-height: 40px;
 }
 
-#main {
+/*#main {
     margin-top: 80px;
-}
+}*/
 
 /* --------------------------------------------------------------
 # Navigation Menu
